# lifeOS

./: .env.example  .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  logging.py  redis.py
apps/api/app/modules/cyber_lab/: __init__.py  router.py  schemas.py  service.py
apps/api/app/modules/exploit_lab/: __init__.py  history.py  report_service.py  router.py  schemas.py  session_handler.py  target_manager.py  tool_runner.py
apps/api/app/modules/exploit_lab/providers/: custom_exploit.py  metasploit.py  payload_generator.py  recon.py  shell_handler.py
apps/api/app/modules/genshin/: __init__.py  router.py  schemas.py  service.py
apps/api/app/modules/genshin/providers/: akasha.py  enka.py
apps/api/app/modules/trading/: __init__.py  ai_router.py  ai_service.py  briefing_service.py  calendar_service.py  history_service.py  impact_service.py  insight_service.py  jarvis_router.py  market_service.py  news_service.py  recap_service.py  router.py  schemas.py  service.py  summary_service.py  voice_service.py
apps/api/app/modules/trading/providers/: coingecko.py  economic_calendar.py  fear_greed.py  news_provider.py
apps/api/app/modules/trading/providers/ai/: base_ai_provider.py  gemini_provider.py  groq_provider.py  local_llm_provider.py  mock_ai_provider.py  openai_provider.py
apps/api/app/modules/trading/providers/voice/: base_voice_provider.py  browser_voice_provider.py  elevenlabs_provider.py  openai_tts_provider.py
apps/api/app/routers/: health.py
(+2 files in other folders)
